--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -15,23 +15,25 @@
 <div class="container">
     <!--HEADER-->
 <header class="header">
-        <div><h1>Club sol y Lago</h1></div>
+        <div><h1 class="animate__animated animate__slow animate__backInDown">Club sol y Lago</h1></div>
         <div id="logo">
             <img src="../imagenes/logo.png" alt="logo" />
         </div>
     <div class="nav">
+        <div class="animate__animated animate__slow animate__zoomIn">
         <ul id="barra">
             <li><a class= "menu" href="../index.html">Sobre Nosotros</a></li>
             <li><a class= "menu" href="./actividades.html">Actividades</a></li>
             <li><a class= "menu" href="./contacto.html">Contacto</a></li>
         </ul>
     </div>
+    </div>
 </header>
      <!--MAIN-->
     <section class="main_container">
         <article class="act1">
             <div class="actividad1">
-                <h3>Natacion</h3>
+                <h3 class="animate__animated animate__bounce">Natacion</h3>
             </div>
             <div class="imagen1">
                 <img src="../imagenes/actividadnatacion.avif" alt="natacion" class="imagenActividades" width="450px">
@@ -42,7 +44,7 @@
         </article>   
         <article class="act2">
             <div class="actividad2"> 
-                <h3>Aquagym</h3>
+                <h3 class="animate__animated animate__bounce">Aquagym</h3>
             </div>
             <div class="imagen2">
                 <img src="../imagenes/actividadaquagym.webp" alt="aquagym" class="imagenActividades" width="450px">
@@ -54,7 +56,7 @@
         </article>
         <article class="act3">
             <div class="actividad3">
-                <h3>Aquacross</h3>
+                <h3 class="animate__animated animate__bounce">Aquacross</h3>
             </div>
              <div class="imagen3">
                 <img src="../imagenes/actividadaquacross.jpg" alt="aquagym" class="imagenActividades" width="450px">
@@ -66,7 +68,7 @@
         </article>
         <article class="act4">
             <div class="actividad4">
-                <h3>Matronatacion</h3>
+                <h3 class="animate__animated animate__bounce">Matronatacion</h3>
             </div>
             <div class="imagen4">
                 <img src="../imagenes/actividadmatro.jpeg" alt="matronatación" class="imagenActividades" width="450px">
@@ -77,7 +79,7 @@
         </article>
         <article class="act5">
             <div class="actividad5">
-                <h3>Practica libre</h3>
+                <h3 class="animate__animated animate__bounce">Practica libre</h3>
             </div> 
             <div class="imagen5">
                 <img src="../imagenes/actividadpractica.jpg" alt="practica libre" class="imagenActividades" width="450px">
@@ -89,7 +91,7 @@
         </article>
         <article class="act6">
             <div class="actividad6">
-                <h3>Rehabilitacion</h3>
+                <h3 class="animate__animated animate__bounce">Rehabilitacion</h3>
             </div>
             <div class="imagen6">
                 <img src="../imagenes/actividadrehabilitacion.jpeg" alt="rehabilitación" class="imagenActividades" width="450px">
@@ -100,7 +102,7 @@
         </article>
         <article class="act7">
             <div class="actividad7">
-                <h3>Natacion adaptada</h3>
+                <h3 class="animate__animated animate__bounce">Natacion adaptada</h3>
             </div>
             <div class="imagen7">
                 <img src="../imagenes/actividadadaptada.jpg" alt="natacion adaptada" class="imagenActividades" width="450px">
@@ -111,7 +113,7 @@
         </article>
         <article class="act8">
             <div class="actividad8">
-                <h3>Actividades al aire libre</h3>
+                <h3 class="animate__animated animate__bounce">Actividades al aire libre</h3>
             </div> 
             <div class="imagen8">
                 <img src="../imagenes/actividadaire.webp" alt="actividades al aire libre" class="imagenActividades" width="450px">
