--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,16 +15,18 @@
 <section class="container2">  
      <!--HEADER-->    
 <header class="header2"> 
-    <h1>Club sol y Lago </h1>
+    <h1 class="animate__animated animate__slow animate__backInDown">Club sol y Lago </h1>
         <div id="logo">
             <img src="../imagenes/logo.png" alt="logo" />
         </div>
     <nav class="nav2">
+        <div class="animate__animated animate__slow animate__zoomIn">
         <ul id="barra">
             <li><a class= "menu" href="../index.html">Sobre Nosotros</a></li>
             <li><a class= "menu" href="./actividades.html">Actividades</a></li>
             <li><a class= "menu" href="./contacto.html">Contacto</a></li>
         </ul>
+    </div>
     </nav>
 </header>
 <!--MAIN-->
