--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -39,7 +39,7 @@
                 <img src="../imagenes/actividadnatacion.avif" alt="natacion" class="imagenActividades" width="450px">
             </div>
             <div class="descripcion1">
-                <p class="tracking-in-contract">Dentro de esta actividad aprenderas a tu ritmo los 4 estilos de la natacion: mariposa, espalda, pecho y crol  </p>
+                <p class="focus-in-contract">Dentro de esta actividad aprenderas a tu ritmo los 4 estilos de la natacion: mariposa, espalda, pecho y crol  </p>
             </div>
         </article>   
         <article class="act2">
@@ -50,7 +50,7 @@
                 <img src="../imagenes/actividadaquagym.webp" alt="aquagym" class="imagenActividades" width="450px">
             </div>
             <div class="descripcion2">
-                <p class="tracking-in-contract">El aquagym es una modalidad de fitness acuático con numerosos ejercicios centros en la tonificación muscular. El aquagym adapta al medio acuático el trabajo físico que se realiza en tierra, con la ventaja de la ingravidez que aporta.
+                <p class="focus-in-contract">El aquagym es una modalidad de fitness acuático con numerosos ejercicios centros en la tonificación muscular. El aquagym adapta al medio acuático el trabajo físico que se realiza en tierra, con la ventaja de la ingravidez que aporta.
                     Se trata de una actividad física perfecta para personas con problemas traumatológicos, articulares o musculares o personas en proceso de rehabilitación debido al reducido impacto articular. </p>
                 </div> 
         </article>
@@ -62,7 +62,7 @@
                 <img src="../imagenes/actividadaquacross.jpg" alt="aquagym" class="imagenActividades" width="450px">
              </div>
             <div class="descrpcion3">
-                <p class="tracking-in-contract">consiste en combinar ejercicios fuera del agua, como ‘burpees’, sentadillas, flexiones y abdominales, con largos de piscina y ejercicios con pesas rusas y otros elementos de CrossFit.
+                <p class="focus-in-contract">consiste en combinar ejercicios fuera del agua, como ‘burpees’, sentadillas, flexiones y abdominales, con largos de piscina y ejercicios con pesas rusas y otros elementos de CrossFit.
                     Practicar deporte en el medio acuático aporta diversos beneficios tales como menor impacto, resistencia natural y mayor consumo calórico, mayor flexibilidad y agilidad, mejora de la capacidad aeróbica, efecto zen de relajación y es adaptable a todas las condiciones físicas.</p>
             </div> 
         </article>
@@ -74,7 +74,7 @@
                 <img src="../imagenes/actividadmatro.jpeg" alt="matronatación" class="imagenActividades" width="450px">
             </div>
             <div class="descripcion4">
-                <p class="tracking-in-contract">La matronatación es una actividad que busca la adaptación acuática del bebé por medio de una serie de juegos y actividades que favorecen la flotación y movilidad en el agua.</p>
+                <p class="focus-in-contract">La matronatación es una actividad que busca la adaptación acuática del bebé por medio de una serie de juegos y actividades que favorecen la flotación y movilidad en el agua.</p>
             </div> 
         </article>
         <article class="act5">
@@ -85,7 +85,7 @@
                 <img src="../imagenes/actividadpractica.jpg" alt="practica libre" class="imagenActividades" width="450px">
             </div>
             <div class="descrpcion5">
-                <p class="tracking-in-contract">La natación se trata de un deporte además de recreativo muy beneficioso para el ser humano, ya que al ser principalmente un ejercicio aeróbico, la natación reduce los efectos dañinos del estrés, puede mejorar y corregir la postura y desarrollar un físico característico.
+                <p class="focus-in-contract">La natación se trata de un deporte además de recreativo muy beneficioso para el ser humano, ya que al ser principalmente un ejercicio aeróbico, la natación reduce los efectos dañinos del estrés, puede mejorar y corregir la postura y desarrollar un físico característico.
                     La práctica de un deporte como la natación está basada especialmente en la técnica y de manera secundaria en el entrenamiento de la velocidad y la resistencia. Esta situación se debe a que, a la inversa que otros deportes, el organismo humano no fue diseñado para nadar, ya que esta acción envuelve movimientos, no naturales y poco intuitivos.</p>
             </div> 
         </article>
@@ -97,7 +97,7 @@
                 <img src="../imagenes/actividadrehabilitacion.jpeg" alt="rehabilitación" class="imagenActividades" width="450px">
             </div>
             <div class="descripcion6">
-                <p class="tracking-in-contract">Consiste en tratar a los pacientes en piscinas, utilizando el agua como medio terapéutico, en especial en el tratamiento de pacientes con afecciones traumatológicas, neurológicas y reumatológicas.</p>
+                <p class="focus-in-contract">Consiste en tratar a los pacientes en piscinas, utilizando el agua como medio terapéutico, en especial en el tratamiento de pacientes con afecciones traumatológicas, neurológicas y reumatológicas.</p>
             </div> 
         </article>
         <article class="act7">
@@ -108,7 +108,7 @@
                 <img src="../imagenes/actividadadaptada.jpg" alt="natacion adaptada" class="imagenActividades" width="450px">
             </div>
             <div class="descripcion7">
-                <p class="tracking-in-contract">Natación Adaptada es un proyecto dirigido a personas con discapacidad física, visual, auditiva o intelectual. En el marco de esta pandemia debemos cumplir con el protocolo correspondiente y no podemos asistir al nadador en el agua, entonces por el momento estamos limitados a la independencia motriz y visual de quien realice la actividad.</p>
+                <p class="focus-in-contract">Natación Adaptada es un proyecto dirigido a personas con discapacidad física, visual, auditiva o intelectual. En el marco de esta pandemia debemos cumplir con el protocolo correspondiente y no podemos asistir al nadador en el agua, entonces por el momento estamos limitados a la independencia motriz y visual de quien realice la actividad.</p>
             </div>  
         </article>
         <article class="act8">
@@ -119,7 +119,7 @@
                 <img src="../imagenes/actividadaire.webp" alt="actividades al aire libre" class="imagenActividades" width="450px">
             </div>
             <div class="descripcion8">
-                <p class="tracking-in-contract">Actividades en Mayu Sumaj, como desarrolo de destrezas, yoga, entrenamiento de cario y muchas actividades mas.</p>
+                <p class="focus-in-contract">Actividades en Mayu Sumaj, como desarrolo de destrezas, yoga, entrenamiento de cario y muchas actividades mas.</p>
             </div>
         </article>
     </article>
